# qd

./: Cargo.toml
src/: lib.rs  log.rs  scene.rs
src/gfx/: gl.rs  mod.rs
src/gfx/gl/: frag.glsl  mod.rs  vert.glsl
src/math/: mat.rs  mod.rs  quat.rs  vec.rs  xform.rs
src/mem/: mod.rs
